<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A1B75">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:text="@string/choose_difficulty"
        android:gravity="center">
    </TextView>

    <Button
        android:id="@+id/easyButton"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:text="@string/easy"
        android:background="@drawable/custom_button"
        android:textSize="25sp">
    </Button>

    <Button
        android:id="@+id/normalButton"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:text="@string/normal"
        android:background="@drawable/custom_button"
        android:textSize="25sp">
    </Button>

    <Button
        android:id="@+id/hardButton"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:text="@string/hard"
        android:background="@drawable/custom_button"
        android:textSize="25sp">
    </Button>
</LinearLayout>