<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/ExitButton"
            android:layout_width="205dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/exit"
            android:textColor="#ffff"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PlayButton" />

        <Button
            android:id="@+id/PlayButton"
            android:layout_width="205dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif-black"
            android:text="@string/play_game"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton
            android:id="@+id/SoundButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:background="@null"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sound_on" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="264dp"
            android:fontFamily="serif-monospace"
            android:text="@string/card_flipper"
            android:textColor="#310FF1"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>